remove codecept and use phantomjs with mocha

--- a/test/acceptance/index.html
+++ b/test/acceptance/index.html
@@ -5,10 +5,19 @@
 	<title>Test</title>
 </head>
 <body>
-<h1>It Works!</h1>
-<script src="async-define/async-define.js"></script>
-<script src="events-amd/events-amd.js"></script>
-<script src="doc-amd/doc.js"></script>
-<script src="tag.js"></script>
+	<h1>It Works!</h1>
+	<script src="mocha/mocha.js"></script>
+	<script src="proclaim/lib/proclaim.js"></script>
+	<script src="async-define/async-define.js"></script>
+	<script src="events-amd/events-amd.js"></script>
+	<script src="doc-amd/doc.js"></script>
+	<script src="tag.js"></script>
+	<script>
+		if (window.mochaPhantomJS) {
+			mochaPhantomJS.run();
+		} else {
+			mocha.run();
+		}
+	</script>
 </body>
 </html>
